Fixed bad alignment on 21:9 resolutions

--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -52,7 +52,7 @@
     }
 
     .coachella-mountains {
-        margin-left: 950px;
+        left: calc(50% - 960px)
     }
 }
 
